--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
         "@vitejs/plugin-vue": "^4.3.4",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
+        "pinia": "^2.1.7",
         "vue": "^3.2.36"
     }
 }
