--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,12 @@ services:
         - GID=${GID:-1000}
     volumes:
       - ./src:/var/www/html
-      - ./nginx/:/etc/nginx/conf.d
+      - ./nginx/conf.d/:/etc/nginx/conf.d
+      - ./nginx/ssl/:/etc/nginx/ssl
       - pma_data:/var/www/pma
     ports:
-      - 8080:80
+      - 80:80
+      - 443:443
       - 8081:8081
       - 5173:5173
     depends_on:
