--- a/src/composer.json
+++ b/src/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "imangazaliev/didom": "^2.0",
         "inertiajs/inertia-laravel": "^0.6.10",
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
