--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -13,12 +13,24 @@ RUN groupadd -g ${GID} ${PHP_USER} && \
     sed -i -E "s/^(user|group) = www-data/\1 = ${PHP_USER}/g" /usr/local/etc/php-fpm.d/www.conf
 
 RUN apt-get update && apt-get install -y \
+    libmagickwand-dev \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    libpng-dev \
+    libxpm-dev \
+    libwebp-dev \
     libzip-dev \
     zip \
     git
 
+RUN pecl install imagick 6.9
+
+RUN docker-php-ext-enable \
+    imagick
+
 RUN docker-php-ext-install \
     zip \
+    gd \
     pdo \
     pdo_mysql
 
