--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,16 +1,16 @@
+# server {
+#     listen 80;
+#     server_name localhost;
+
+#     return 301 https://$http_host$request_uri;
+# }
+
 server {
     listen 80;
     server_name localhost;
 
-    return 301 https://$http_host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name localhost;
-
-    ssl_certificate     /etc/nginx/ssl/selfsigned.crt;
-    ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
+    # ssl_certificate     /etc/nginx/ssl/selfsigned.crt;
+    # ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
 
     root /var/www/html/public;
     index index.php index.html;
