--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@floating-ui/vue": "^1.0.2",
+        "@headlessui/vue": "^1.7.16",
         "@inertiajs/vue3": "^1.0.11",
         "@vitejs/plugin-vue": "^4.3.4",
         "lodash": "^4.17.21",
