--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
         "@headlessui/vue": "^1.7.16",
         "@inertiajs/vue3": "^1.0.11",
         "@vitejs/plugin-vue": "^4.3.4",
+        "@vueuse/core": "^10.5.0",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
