--- a/src/package.json
+++ b/src/package.json
@@ -3,16 +3,19 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "test": "vitest"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
+        "happy-dom": "^12.10.3",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.30",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.2.2",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vitest": "^0.34.6"
     },
     "dependencies": {
         "@floating-ui/vue": "^1.0.2",
