--- a/src/package.json
+++ b/src/package.json
@@ -18,14 +18,14 @@
         "vitest": "^0.34.6"
     },
     "dependencies": {
-        "@floating-ui/vue": "^1.0.2",
-        "@headlessui/vue": "^1.7.16",
         "@inertiajs/vue3": "^1.0.11",
         "@vitejs/plugin-vue": "^4.3.4",
         "@vueuse/core": "^10.5.0",
+        "@vueuse/integrations": "^10.6.1",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
+        "sortablejs": "^1.15.0",
         "vue": "^3.2.36"
     }
 }
