add route for missing favicons

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -21,6 +21,10 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    location /storage/favicons {
+        try_files $uri /missing-favicon.png;
+    }
+
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         try_files $fastcgi_script_name =404;
