--- a/src/composer.json
+++ b/src/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "based/laravel-typescript": "^0.0.4",
         "guzzlehttp/guzzle": "^7.2",
         "imangazaliev/didom": "^2.0",
         "inertiajs/inertia-laravel": "^0.6.10",
@@ -20,6 +21,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laracraft-tech/laravel-schema-rules": "^1.3",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
