--- a/src/package.json
+++ b/src/package.json
@@ -7,9 +7,9 @@
         "test": "vitest"
     },
     "devDependencies": {
+        "@vue/test-utils": "^2.4.2",
         "autoprefixer": "^10.4.16",
-        "axios": "^1.1.2",
-        "happy-dom": "^12.10.3",
+        "jsdom": "^22.1.0",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.30",
         "tailwindcss": "^3.3.3",
@@ -18,10 +18,12 @@
         "vitest": "^0.34.6"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.16",
         "@inertiajs/vue3": "^1.0.11",
         "@vitejs/plugin-vue": "^4.3.4",
         "@vueuse/core": "^10.5.0",
         "@vueuse/integrations": "^10.6.1",
+        "class-variance-authority": "^0.7.0",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
