--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,9 +4,7 @@
         "module": "commonjs",
         "baseUrl": "./",
         "paths": {
-            "@/*": [
-                "resources/js/*"
-            ]
+            "@/*": ["resources/js/*"]
         },
         "isolatedModules": true,
         "esModuleInterop": true,
