--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,7 @@
         "@vueuse/core": "^10.5.0",
         "@vueuse/integrations": "^10.6.1",
         "class-variance-authority": "^0.7.0",
+        "fuse.js": "^6.6.2",
         "lodash": "^4.17.21",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
