--- a/src/composer.json
+++ b/src/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "alexcrawford/lexorank-php": "^2.0",
         "based/laravel-typescript": "^0.0.4",
         "guzzlehttp/guzzle": "^7.2",
         "imangazaliev/didom": "^2.0",
