--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
         "test": "vitest"
     },
     "devDependencies": {
+        "@types/sortablejs": "^1.15.7",
         "@vue/test-utils": "^2.4.2",
         "autoprefixer": "^10.4.16",
         "jsdom": "^22.1.0",
