--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,8 @@ services:
       - db_data:/var/lib/mysql
     env_file:
       - ./src/.env
+    ports:
+      - 127.0.0.1:3306:3306
     healthcheck:
       test: mysqladmin ping -h localhost
       start_period: 10s
