Updated readme description and .env.example

--- a/src/.env.example
+++ b/src/.env.example
@@ -6,6 +6,9 @@ APP_URL=http://localhost
 
 APP_MAX_URL_LENGTH=2048
 
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost:8080
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
